--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "mavon-editor": "^2.8.3",
     "node-sass": "^4.13.1",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
@@ -40,7 +42,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "element-ui": "^1.2.9",
+    "element-ui": "^2.13.1",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
